--- a/data/setupPage.html
+++ b/data/setupPage.html
@@ -61,63 +61,24 @@
 
 <body>
   <h1>ESP32 Home Controller</h1>
+  <h2>Wifi Setup Page</h2>
 </body>
 
 <div class="flex-container"><!---------------------- flex-container ---------------------->
- 
-  <div class="container-lighting-buttons"><!---------------------- container-lighting-buttons ---------------------->
-  <button class="button plug_desk_lamp_button" onclick="sendRequest(this, '/plug?item=desk_lamp')" id="desk_lamp_button"> Toggle Desk Lamp </button>
-  <br>
-  <button class="button plug_globe_button" onclick="sendRequest(this, '/plug?item=globe')" id="plug_globe_button"> Toggle Globe </button>
-  <br>
-  <button class="button plug_night_lamp_button" onclick="sendRequest(this, '/plug?item=night_lamp')" id="plug_night_lamp_button"> Toggle Night Lamp </button>
-  </div><!---------------------- end container-lighting-buttons ---------------------->
 
-  <div class="container-appliance-buttons"><!---------------------- container-appliance-Buttons ---------------------->
-  <button class="button plug_bcpu_button" onclick="sendRequest(this, '/plug?item=bcpu')" id="plug_bcpu_button"> Toggle BCPU </button>
-  <br>
-  <button class="button plug_printer_button" onclick="sendRequest(this, '/plug?item=printer')" id="plug_printer_button"> Toggle Printer </button>
-  </div><!---------------------- end container-appliance-buttons ---------------------->
+    <div class="container-Connect"><!---------------------- container-Password ---------------------->
+      <label for="SSID">SSID:</label>
+      <input list="SSID_found" class="SSID" id="SSID" name="SSID" requred size="10"/>
+      <datalist id="SSID_found">
+        <option value="Test"></option>
+      </datalist>
+      <br>
+      <label for="Password">Password:</label>
+      <input type="password" id="Password" name="Password" requred size="10"/>  
+      <br>
+      <button class="button connect_button" onclick="sendRequest(this, '/wifi?item=wifi_connect')" id="connect_button">Connect</button>
+    </div><!---------------------- end container-Password ---------------------->
 
-  <div class="container-shutter"><!---------------------- container-shutter ---------------------->
-  <button class="button wol_button" onclick="sendRequest(this, '/sendWOL')" id="wol_button"> Send WOL </button>
-  <br>
-  <button class="button shutterUP_button" value="ON" onmousedown="moveShutter(this)" id="shutterUP"> Shutter UP </button>
-  <br>
-  <button class="button shutterDOWN_button" value="ON" onmousedown="moveShutter(this)" id="shutterDOWN"> Shutter DOWN </button>
-  <script>
-    function moveShutter(element)
-    {
-      sendRequest(this, "/shutter?dir=" + element.id + "&status=" + element.value)
-
-      if(element.value == "ON")
-      {
-        element.value = "OFF";
-      }
-      else
-      {
-        element.value = "ON";
-      }
-    }
-  </script>
-
-  </div><!---------------------- end container-shutter ---------------------->
-
-  <!--
-  <div class="container-time_select"><!---------------------- container-time_select ---------------------->
-  <!--
-  <label class="activeTimeSelect_switch">
-    <input type="checkbox" value="ON" id="activeTimeSelect"><span class="activeTimeSelect_slider"></span>
-  </label>
-  <br>
-  Up time: <input type="time" id="appt" name="appt">
-  <br>
-  Down time: <input type="time" id="appt" name="appt">
-  <div>
-    <input type="submit" value="Submit time">
-  </div>
-</div><!---------------------- end container-time_select ---------------------->
- 
 </div><!---------------------- end flex-container ---------------------->
 
 <input type="text" id="messageField" name="messageField" value="" readonly>
@@ -178,6 +139,7 @@
   }
 </script>
 
-<span id = "time"><strong>%TIME% %VERSION% page version: 0.0.1</strong></span>
+
+<span id = "time"><strong>%VERSION% page version: 0.0.1</strong></span>
 
 </html>
